--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+This isn't our project. Please go to https://github.com/yarrick/pingfs for actual code
+We needed an open source assignment for a project for UTD CS 3354
+
 pingfs - "True cloud storage"
 	by Erik Ekman <erik@kryo.se>
 
